# pycmkr

./: .gitignore  README.md  main.py  pyproject.toml
src/pycmkr/: __init__.py  cli.py
tests/: conftest.py  test_cpm_unit.py  test_integration.py  test_main_unit.py
tests/fixtures/minimal_project/: CMakeLists.txt  build_config.json  dependencies.cmake  main.c  unit_tests.c
