[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycmkr"
version = "0.1.0"
license = {text = "MIT"}
description = "A Python-based CMake/Ninja build wrapper and project manager for C/C++ projects"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "MyriadColors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# No external dependencies needed - uses only stdlib
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
pycmkr = "pycmkr.cli:main"

[project.urls]
Homepage = "https://github.com/MyriadColors/pycmkr"
Repository = "https://github.com/MyriadColors/pycmkr"
Issues = "https://github.com/MyriadColors/pycmkr/issues"

[tool.pytest.ini_options]
markers = ["integration: requires cmake/ninja"]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/pycmkr"]
